tests/baselines/reference/globalMergeWithCommonJSAssignmentDeclaration.errors.txt
bug27099.js(1,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== bug27099.js (1 errors) ====
    window.name = 1;
    ~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    window.console; // should not have error: Property 'console' does not exist on type 'typeof window'.
    module.exports = 'anything';
    
    